welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: max2 is already defined as variable max2
  var max2 = nums(0)
      ^