welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  val n = nums.length
  var max1 = nums(0)
  var max2 = 0
  if (nums(1) < max1) {max2 = nums(1)} else {max2=max1; max1=(nums(1))}
  for (i <- 2 to n-1) {
    if (nums(i) >= max1) {
      max2 = max1
      max1 = nums(i)
    }
    else if (nums(i) >= max2) {
      max2 = nums(i)
    }
  }
  return max2
}